# neural-analysis

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PYTHON_312_MIGRATION.md  README.md  REFACTORING_METRICS.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TODO.md  TODO_COMPREHENSIVE.md  pyproject.toml  test_colorbar.py  test_colorbar_debug.py  test_embeddings_integration.py
.github/: dependabot.yml
.github/instructions/: claude.instructions.md
.github/workflows/: ci.yml  test.yml
backup/: Visualizer.py.backup  structure_index.py.backup
backup/Notebooks.backup/: Make_yaml_steffen.ipynp.backup  Restructure_make_yaml_nathlie_openfield.ipynp.backup
backup/parallel_transport_unfolding.backup/: .gitignore  README.md  pyproject.toml
backup/parallel_transport_unfolding.backup/parallel_transport_unfolding/: ptu_dijkstra.c  ptu_dijkstra.pyx
docs/: Makefile  PHASE4_PROGRESS.md  ci_status.md  claude.md  conf.py  decoding_module.md  distributions_README.md  examples.rst  folder_structure.md  function_registry.json  function_registry.md  hdf5_structure.md  historical_migrations.md  index.rst  installation.rst  local_ci_testing.md  logging.md  migration_progress.md  neural_analysis_demo.ipynb  plotgrid.md  plotgrid_enhancement_summary.md  plotgrid_examples.md  plotgrid_implementation_summary.md  plotgrid_migration.md  plotgrid_system.md  plotting_architecture.md  project_goal.md  python_testing_setup.md  quickstart.rst  requirements.txt  setup_script_usage.md  structure_index.md  structure_index_README.md  synthetic_datasets_notebook.md  testing_and_ci.md  visualizer_migration_plan.md  visualizer_migration_progress.md
docs/api/: index.rst
examples/: classification_examples.ipynb  embeddings_demo.ipynb  io_h5io_examples.ipynb  logging_examples.ipynb  metrics_examples.ipynb  neural_analysis_demo.ipynb  neural_analysis_example.ipynb  phase3_api_demo.ipynb  plots_1d_examples.ipynb  plots_2d_examples.ipynb  plots_3d_examples.ipynb  plotting_grid_showcase.ipynb  random_cells_diagnostics_example.py  statistical_plots_examples.ipynb  structure_index_examples.ipynb
scripts/: execute_notebooks.py  generate_function_registry.py  run_ci_locally.sh  setup_env.sh  test_decoding_simple.py  test_phase3_integration.py
src/neural_analysis/: __init__.py  decoding.py  example.py  synthetic_data.py
src/neural_analysis/data/: __init__.py  synthetic_data.py
src/neural_analysis/embeddings/: __init__.py  dimensionality_reduction.py  visualization.py
src/neural_analysis/learning/: __init__.py  classification.py  decoding.py
src/neural_analysis/metrics/: __init__.py  distance.py  distributions.py  outliers.py  pairwise_metrics.py  similarity.py
src/neural_analysis/plotting/: __init__.py  backend.py  core.py  embeddings.py  grid_config.py  heatmaps.py  plots_1d.py  plots_2d.py  plots_3d.py  renderers.py  statistical_plots.py  synthetic_plots.py
src/neural_analysis/topology/: __init__.py  plotting.py  structure_index.py
src/neural_analysis/utils/: __init__.py  comparison_store.py  geometry.py  io.py  logging.py  preprocessing.py  trajectories.py  validation.py
src/neural_analysis/visualization/: __init__.py
tests/: test_classification.py  test_decoding.py  test_embeddings.py  test_example.py  test_metrics_distance.py  test_metrics_distributions.py  test_metrics_outliers.py  test_phase3_comparison_functions.py  test_placeholder.py  test_plots_1d.py  test_plots_2d.py  test_plots_3d.py  test_plots_heatmaps_subplots.py  test_plotting_new.py.duplicate_backup  test_similarity.py  test_structure_index.py  test_synthetic_data.py  test_utils_io.py  test_utils_io_h5io.py  test_utils_preprocessing.py  test_utils_validation.py
todo/: Classes.py  Datasets.py  Helper.py  Manimeasure.py  ModelCls.py  Setups.py  SignalProcessing.py  Visualizer.py  calculations.py  numba_python314.md  plotting_integration_summary.md  restructure.py  synthetic_data_enhancements_completed.md  todo_integrate_databases.md  yaml_creator.py
