[project]
name = "neural-analysis"
version = "0.0.0"
description = "Automated pipeline for building and testing neural analysis methods with reproducible environments"
readme = "README.md"
license = {text = "MIT"}
authors = [ { name = "maintainer", email = "you@example.com" } ]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2.3", # Pin to avoid Python 3.14 incompatibility with NumPy 2.3+
    "matplotlib>=3.7",
    "scipy>=1.11",
    "ipykernel>=6.29",
    "pip>=24.0",
    "plotly>=5.18",
    "nbformat>=5.10",
    "pandas>=2.0",
    "h5py>=3.10",
    "pot>=0.9", # Optimal Transport (import name: ot)
    "scikit-learn>=1.7.2",
    "numba>=0.59",  # JIT compiler for fast parallel similarity computations
    "umap-learn>=0.5.3",  # UMAP dimensionality reduction
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=7.0",
    "mypy>=1.18",
    "ruff>=0.14",
    "pre-commit>=4.0",
]
viz = [
    "plotly>=5.18",
    "pandas>=2.0",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
]

[project.scripts]
# Add CLI entry points here as needed
# example = "neural_analysis.cli:main"



[build-system]
requires = ["hatchling>=1.14"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
]
ignore = [
    "W293",   # Blank line contains whitespace (autofixed by formatter)
    "W291",   # Trailing whitespace (autofixed by formatter)
    "C408",   # Unnecessary dict() call (plotly requires it for type safety)
    "B905",   # zip() without strict (not needed for numpy arrays)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Error on unknown markers
    "--strict-config",        # Error on unknown config options
    "--showlocals",           # Show local variables in tracebacks
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
