[build-system]
requires = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel_transport_unfolding"
version = "0.0.1"
authors = [
    {name = "Max Budninskiy"},
]
description = "Parallel Transport Unfolding: Quasi-Isometric Manifold Learning"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cython >= 0.29.20",
    "matplotlib >= 3.0.0",
    "numpy >= 1.26.0",
    "scikit-learn >= 0.20.0",
    "scipy >= 1.1.0",
]